--- a/PlaywrightTraining/package.json
+++ b/PlaywrightTraining/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@playwright/test": "^1.56.0",
     "@types/node": "^24.7.1"
+  },
+  "dependencies": {
+    "allure-playwright": "^3.4.2"
   }
 }
