--- a/PlaywrightTraining/package.json
+++ b/PlaywrightTraining/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^24.7.1"
   },
   "dependencies": {
-    "allure-playwright": "^3.4.2"
+    "allure-playwright": "^3.4.2",
+    "convert-excel-to-json": "^1.7.0",
+    "dotenv": "^17.2.3"
   }
 }
